src/scss/_anchor.scss
.yfm {
    h1, h2, h3, h4, h5, h6 {
        .yfm-anchor {
            display: inline-block;
            width: 24px;
            padding-right: 4px;
            margin-left: -24px;
            float: left;

            text-align: center;
            font-size: 18px;
        }

        .yfm-anchor::before {
            content: '#';
            visibility: hidden;
        }

        &:hover .yfm-anchor::before {
            visibility: visible;
        }
    }

    table {
        h1, h2, h3, h4, h5, h6 {
            .yfm-anchor {
                width: 1em;
                margin-left: -1em;
                padding-right: 0;
            }
        }
    };

    .yfm-tabs {
        .yfm-anchor::before {
            position: absolute;
            padding-right: 2px;
        }
    }
}

